css/product.css
/* ... */
.nav-button:hover{
	background-color: #00ADEF;
	border:none;
	color:white;
	transition:0.3s;

}
/*END OF PRODUCT NAVIGATION SECTION*/


/*BREADCRUMBS*/
.breadcrumbs{
	display: inline;
	float:left;
	margin-top: 2rem;
	margin-bottom: 0;
}

.breadcrumbs a{
	margin: 0;
	padding:0;
	font-size: 0.75rem;
	text-decoration: none;
}

.bc-home, .bc-products{
	font-family: PT Sans;
	text-transform: uppercase;
	display: inline;
	font-weight: 400;
	margin-right: 2em;
	color: #919191;
	text-decoration: none;
}

.bc-home:hover, .bc-products:hover{
	color: #00ADEF;
	transition:0.5s;
	border-bottom: 1px solid #00ADEF;
	text-decoration: none;
}

.bc-break{
	font-family: PT Sans;
	text-transform: uppercase;
	display: inline;
	font-weight: 400;
	margin: 0 0.5em;
	color: #919191;
}

.bc-current{
	font-family: PT Sans;
	text-transform: uppercase;
	display: inline;
	font-weight: 400;
	margin: 0 0.5em;
	color: #00ADEF;
	text-decoration: none;
}
/*END OF BREADCRUMBS*/


/*PRODUCT LIST SECTION*/
.product-list{
	display: inline-block;
	float:left;
	width: 64%;
	margin-right: 5%;
}

.over-banner{
	position: relative;
}

.over-banner-label{
	width: 100%;
	font-family: PT Sans;
	font-size: 2em;
	text-transform: uppercase;
	letter-spacing: 3px;
	font-weight: 700;
	color: black;
	background: rgba(255,255,255,0.8);
	padding: 0.75em 0em;
	position: absolute;
	bottom: 0;
	left: 0;
	float: none;
	margin: .5em 0;
	text-align: center;
}

.category-banner {
	width:100%;
	margin-bottom: 1em;
}

.refine{
	width:100%;
	float:left;
	display:inline-block;
}

#search-bar{
	display: inline-block;
	float:left;
	width:85%;
}

.search{
	padding:1em;
	padding-right: 2em;
	width: 100%;
	float:left;
}

.search-button{
	display: inline-block;
	float: left;
	padding-top:0.5em;
}

.search-line{
	display: inline-block;
	width:30%;
	float:right;
}

/*---drop down sort by bar---*/
.drop-down{
	position: relative;	
	border-radius: 0;
	width: 45%;
  	height: 2.5rem;
  	line-height: 2.5rem;
  	overflow: hidden;
  	border: 1px solid #ccc;
  	padding: 0 1rem;
  	margin: 0;
  	margin-right:1em;
  	display: inline-block;
  	float:left;
}

select{
	font-family: PT Sans;
	text-transform: uppercase;
	font-size: 0.75em;
	letter-spacing: 3px;
	text-align: center;
	background-color: white;
	border:0;
	border-radius: 0;
	margin: 0.5em;
	transition: 0.5s;
	width:100%;
}

select:focus {
	outline:none;
}
/*END OF PRODUCT LIST SECTION*/


/*MULTI-ITEM SECTION*/
.multi-item{
	float:left;
/*	margin-right:%;*/
	margin-top: 2rem;
	display: block;
	margin-bottom: 0.25rem;
}

.multi-item:hover{
	background-color: white;
	opacity: 0.5;
	transition:0.3s;
}

.item-name{
	font-family: PT Sans;
	font-size: 1rem; 
	display: block;
	text-align: center;
	margin:0;
}

.item-number{
	font-family: PT Sans;
	text-transform: uppercase;
	font-size: 0.75rem;
	font-weight: 700;
	text-align: center;
	margin-top: 0.25rem;
}

.item-box{
	display: inline-block;
	margin-right: 3.5%;
	text-align:center;
}
/*END OF MULTI-ITEM SECTION*/


/*------------------VIEW ITEM HTML------------------*/

/*VIEW ITEM BREADCRUMBS*/
.item-breadcrumbs{
	display: inline;
	float:left;
	margin-top: 2rem;
	margin-bottom: 0;
	width:100%;
	margin-left: 4em;
}

.item-breadcrumbs a{
	margin: 0;
	padding:0;
	font-size: 0.75rem;
}
/*END OF VIEW ITEM BREADCRUMBS*/



/*ITEM DIV - includes details of the items and recommendaton*/
.item-all {
	margin-top: 4em;
	height:auto;
	width: 100%;
	display: block;
}

/*VIEW ITEM SECTION*/
.view-item{
	display: block;
	margin-bottom: 3em;
	width:100%;
	float: left;w
}

.item-picture{
	margin-top: 1.5em;
	margin-left: 4em;
	float:left;
}

.item-heading{
	width: 60%;
	height: auto;
	float: right;
}

.item-header{
	font-family: PT Sans;
	font-weight: 700;
	text-transform: uppercase;
	color:black;
	font-size: 2rem;
	padding-bottom: 0.25em;
	letter-spacing: 5px;
	display: block;
	margin-top: 0.5em;
	margin-bottom: 0;
}

.item-price{
	font-family: PT Sans;
	font-weight: 700;
	text-transform: uppercase;
	color:black;
	font-size: 1.5rem;
	padding-bottom: 0.25em;
	letter-spacing: 5px;
	display: block;
	margin-top: 1em 0;
}

.item-subheader{
	font-family: PT Sans;
	text-decoration: uppercase;
	text-transform: uppercase;
	display: block;
	margin:0;
}

.item-description{
	font-family: Crimson Text;
	line-height: 2em;
	width: 60%;
	font-size: 0.75em;
	margin: 3em 0;
}

.quantity{
	font-family: PT Sans;
	text-transform: uppercase;
	letter-spacing: 3px;
	font-size: 0.75em;
	margin: 0;
}
.item-quantity {
	font-family: PT Sans;
	 padding: 0.25rem;
	 text-transform: uppercase;
	 letter-spacing: 2px;
	 width: 50%;
	 margin-bottom: 2em;
	 display: block;
}

/*--- Add cart button ---*/
.button{
	width: 48%;
	float:left;
	text-decoration: none;
	list-style: none;
	border: 1px solid #000000;
	padding: 0.75em 1em;
	text-align: center;
	font-family: PT Sans;
	text-transform: uppercase;
	font-weight: 700;
	letter-spacing: 2px;
	font-size: 12px;
	background-color: black;
	color: white;
	transition:0.3s;
	display: block;
}

.button:hover{
	background-color: #00ADEF;
	border:1px solid #00ADEF;
	transition:0.3s;
}
/*END OF VIEW ITEM SECTION*/


/*RECOMMENDATION SECTION*/
.recommendations{
	border-top: 1px solid #ccc;
	padding-top: 3em;
	display: block;
	float: left;
	width:100%;
}

.recommendation-box{
	display: inline;
	text-align: center;
	float: left;
	width: 100%
}

.recommend-item-box{
	display: inline-block;
	margin-right: 3.5%;
	text-align:center;
	width: 11%;
	min-width:125px;
}

.small-header{
	font-size: 0.75rem;
	margin: 0;
	text-transform: uppercase;
	letter-spacing: 3px;
	text-align: center;
}
/*END OF RECOMMENDATION SECTION*/


/*------------------VIEW ITEM HTML------------------*/
/*INFORMATION SECTION*/
.information{
	float: left;
	position: absolute;
	top:5em;
	width: 40%;
	margin-left: 5%;
	display: inline;
}

.information-header{
	margin-top: 1em;
	margin-left: 1.5em;
}

.checkout-information{
	display: block;
	float: left;
	width:100%;
}
/* ... */

